# NN_Semester_Project

./: Data_Analysis.ipynb  Hristo_main.py  NN_Kikis.ipynb  NN_Kikis_Data.ipynb  NN_backup.ipynb  README.md  Yoko_notebook_not__really.ipynb  ae.train  aeDataImport.m  best_full_model.pth  best_model.pth  best_model_cross_val.pth  main.py  model.py  pyproject.toml  test_inputs.csv  test_outputs.csv  train_inputs.csv  train_outputs.csv
.ipynb_checkpoints/: Hristo_main-checkpoint.py  NN_Kikis-checkpoint.ipynb  NN_Kikis_Data-checkpoint.ipynb  Yoko_notebook_not__really-checkpoint.ipynb
data/: .~lock.fold_detailed_losses.csv#  .~lock.fold_results.csv#  fold_detailed_losses.csv  fold_results.csv
models/: best_full_model.pth  best_model_cross_val.pth  best_model_cross_val_20240629203918_63c842d1.pth  best_model_cross_val_20240629204516_cf8d2993.pth  best_model_cross_val_20240629205317_0e6c515e.pth  best_model_cross_val_20240629205827_9296ed86.pth  best_model_cross_val_20240629205951_731ee9af.pth  best_model_cross_val_20240629210107_709be21f.pth  best_model_cross_val_20240629211045_0fa87c1d.pth  best_model_cross_val_20240629211126_28ea3c8f.pth  best_model_cross_val_20240629211510_ff980895.pth  best_model_cross_val_20240629212334_53a916f4.pth  best_model_cross_val_20240629221038_0dd311a0.pth  best_model_cross_val_20240630085259_1007361e.pth  best_model_cross_val_20240630090942_1bf8ac90.pth  best_model_cross_val_20240630092134_c262ca82.pth  best_model_cross_val_20240630093438_3efae31a.pth  best_model_cross_val_20240630094017_080f833c.pth  (+78 more)
