[tool.poetry]
name = "neuralnetworks"
version = "0.1.0"
description = ""
authors = ["Kikis <kikispcmr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.09,<3.12"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.4"
torch = "^2.3.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
